second commit - fix wrap

--- a/style.css
+++ b/style.css
@@ -1,144 +1,219 @@
-/* Universal Styles */
+* {
+  vertical-align: baseline;
+  font-weight: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  border: 0 none;
+  outline: 0;
+  padding: 0;
+  margin: -1px;
+}
+
+html {
+  font-size: 16px;
+}
+
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 300;
+  src: url(https://fonts.gstatic.com/s/barlow/v5/7cHqv4kjgoGqM7E3p-ks51ostz0rdg.woff2)
+    format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 500;
+  src: url(https://fonts.gstatic.com/s/barlow/v5/7cHqv4kjgoGqM7E3_-gs51ostz0rdg.woff2)
+    format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: 'Barlow';
+  font-style: normal;
+  font-weight: 700;
+  src: url(https://fonts.gstatic.com/s/barlow/v5/7cHqv4kjgoGqM7E3t-4s51ostz0rdg.woff2)
+    format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
 
 body {
-    margin: 0;
-    font-family: "Helvetica", sans-serif;
-    color: seashell;
-    background-color: black;
-    font-size: 22px;
-    text-align: center;
-  }
-  
-  a {
-    color: seashell;
-  }
-  
-  h2,
-  h3,
-  h4 {
-    margin: 0;
-    padding: 10px;
-  }
-  
-  .flex-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-  
-  /* Header Section */
-  
-  header {
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-    height: 69px;
-    background-color: black;
-    border-bottom: 1px solid seashell;
-    align-items: center;
-  }
-  
-  header img {
-    height: 50px;
-    padding-left: 10px;
-  }
-  
-  nav {
-    text-align: right;
-    flex-grow: 1;
-  }
-  
-  nav span {
-    display: inline-block;
-    padding: 20px 10px;
-  }
-  
-  /* Main Section */
-  
-  .main {
-    padding-top: 69px;
-    opacity: 0.9;
-    width: 1200px;
-    margin: auto;
-  }
-  
-  /* Mission Section */
-  
-  #mission {
-    height: 700px;
-    background-image: url("https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg");
-    padding-top: 70px;
-  }
-  
-  #mission .content {
-    margin: auto;
-    background-color: black;
-    width: 100%;
-  }
-  
-  /* Store Section */
-  
-  #store {
-    height: 700px;
-    width: 1000px;
-    margin: auto;
-    padding-top: 70px;
-  }
-  
-  .item {
-    padding: 5px;
-  }
-  
-  .item img {
-    height: 200px;
-    margin: 10px;
-    display: block;
-  }
-  
-  .item span {
-    display: block;
-    padding: 5px;
-    font-weight: bold;
-    text-align: center;
-  }
-  
-  /* Location Section */
-  
-  .flex-container.locations {
-    padding-top: 5px;
-  }
-  
-  #locations {
-    background-image: url("https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg");
-    height: 500px;
-    padding-top: 70px;
-  }
-  
-  #locations .flex-container {
-    margin: auto;
-    width: 1100px;
-  }
-  
-  .location {
-    opacity: 1.0;
-    padding: 10px;
-    margin: 5px 20px;
-    background-color: black;
-    flex-basis: 280px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  /* Contact Section */
-  
-  #contact {
-    height: 200px;
-  }
-  
-  /* Footer Section */
-  
-  footer {
-    text-align: left;
-    padding-left: 20px;
-  }
+  font-family: 'Barlow';
+  background-color: rgb(38, 38, 39);
+}
+
+/* Header section */
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 7px;
+}
+
+header {
+  width: 95%;
+  position: fixed;
+  z-index: 10;
+  padding-bottom: 5px;
+  height: 69px;
+  background-color: black;
+  border: 1px solid seashell;
+  align-items: center;
+  opacity: 0.9;
+}
+
+nav {
+  text-align: right;
+  flex-grow: 1;
+}
+
+nav span {
+  display: inline-block;
+  padding: 30px 15px;
+}
+
+nav a {
+  color: aliceblue;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: bisque;
+}
+
+header img {
+  height: 65px;
+  padding-left: 10px;
+}
+
+.animate__animated.animate__fadeIn {
+  --animate-duration: 3s;
+}
+
+main {
+  padding-top: 69px;
+  opacity: 0.9;
+  width: 1000px;
+  margin: auto;
+}
+/* Mission Container */
+
+#mission {
+  height: 700px;
+  background-image: url('https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg');
+  padding-top: 70px;
+}
+
+#mission .content {
+  margin: auto;
+  background-color: black;
+  width: 100%;
+  opacity: 0.8;
+}
+
+h2 {
+  color: rgb(252, 252, 252);
+  text-align: center;
+  font-size: 3.5rem;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+h3 {
+  color: #9e9e9e;
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 300;
+  text-align: center;
+  margin: 11px;
+}
+
+h4 {
+  color: rgb(252, 252, 252);
+  text-align: center;
+  font-size: 1.7rem;
+  font-weight: 300;
+  text-align: center;
+  margin: 12px;
+}
+
+#store {
+  height: 700px;
+  width: 1000px;
+  margin: auto;
+  padding-top: 70px;
+}
+
+.item {
+  padding: 5px;
+}
+
+.item img {
+  width: 300px;
+  margin: 5px;
+  display: block;
+  border-radius: 5px;
+  border: 1px solid white;
+}
+
+.item span {
+  display: block;
+  padding: 10px;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+  font-weight: 300;
+  font-size: 1.2rem;
+}
+
+.flex-container.locations {
+  padding-top: 5px;
+}
+
+#locations {
+  background-image: url('https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg');
+  height: 500px;
+  padding-top: 70px;
+}
+
+#locations .flex-container {
+  margin: auto;
+  width: 900px;
+}
+
+.location {
+  opacity: 1;
+  padding: 5px;
+  margin: 5px 20px;
+  background-color: black;
+  flex-basis: 280px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 17px;
+  padding: 13px;
+}
+
+/* Contact Section */
+
+#contact {
+  height: 200px;
+}
+
+/* Footer Section */
+
+footer {
+  text-align: left;
+  padding-left: 20px;
+}
